ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: wordpress-dev
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    # nginx.ingress.kubernetes.io/fastcgi_send_timeout: "1800"
    # nginx.ingress.kubernetes.io/fastcgi_read_timeout: "1800"
    # nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    # nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    # nginx.ingress.kubernetes.io/fastcgi-params-configmap: "development/word-cm"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #     location ~ \.php$ {
    #             try_files $uri =404;
    #             fastcgi_split_path_info ^(.+\.php)(/.+)$;
    #             fastcgi_pass wordpress-site:9000;
    #             fastcgi_index index.php;
    #             include fastcgi_params;
    #             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
    #             fastcgi_param PATH_INFO $fastcgi_path_info;
    #     }
  name: wordpress-dev
  namespace: development
spec:
  rules:
  - host: dev.example.io
    http:
      paths:
      - backend:
          serviceName: wordpress-site
          servicePort: 80
  tls:
  - hosts:
    - dev.example.io
    secretName: wordpress-dev
